--- a/src/app/components/VisualGridDeviceOrientations/style.css
+++ b/src/app/components/VisualGridDeviceOrientations/style.css
@@ -1,6 +1,6 @@
 .selections + .btn.confirm {
   float: right;
-  margin: 12px -7px !important;
+  margin: 10px -5px -4px 0;
 }
 
 .selections .title {
