--- a/src/app/components/VisualGridViewports/style.css
+++ b/src/app/components/VisualGridViewports/style.css
@@ -1,3 +1,8 @@
+.custom-viewport-sizes {
+  max-height: 100px;
+  overflow-y: auto;
+}
+
 .custom-viewport-sizes .header {
   padding-bottom: 30px;
 }
